Estructura de proyecto

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- Primera Region-->
     <section>
         <div>
-            <img src="/img/icons/cd.png" alt="">
+            <img src="/img/icons/cds.png" alt="Logo">
         </div>
         <div>
             <nav>
-                <a href="#">Acerca de mi</a>
-                <a href="#">Proyectos</a>
-                <a href="#">Intereses</a>
-                <a href="#">Contacto</a>
+                <a href="#">¿Quienes somos?</a>
+                <a href="#">Productos</a>
+                <a href="#">Ofertas</a>
+                <a href="#">Ventas</a>
             </nav>
         </div>
         <div>
@@ -27,23 +27,40 @@
             <p>twt</p>
         </div>
     </section>
+    <hr>
 
     <!-- Segunda Region-->
     <section>
-        <div class="col">Parte 1</div>
-        <div class="col">Parte 2</div>
+        <div class="col">
+            <h1>Hola somos el Grupo 2</h1>
+            <h4>Estudiantes Certus </h4>
+            <p>Se realizara un proyecto de una tienda virtual.</p>
+        </div>
+        <br>
+        <div class="col">
+            <img src="" alt="Imagen de la tienda">
+        </div>
     </section>
+    <hr>
 
     <!-- Tercera Region-->
     <section>
-        <div class="col">Parte 1</div>
-        <div class="col">Parte 2</div> 
+        <div class="col">
+            <h3>¿Quienes somos?</h3>
+            <p>Somos la tienda Virtual S.A.C nos encargamos de distribuir los diferentes productos sin necesidad de salir de casa.</p>
+            <br>
+            <p>Con solo un click podra obtener lo que desea, confie en nosotros para tus compras virtuales.</p> 
+        </div>
+        <div class="col">
+            <img src="" alt="Imagen de la tienda">
+        </div> 
     </section>
+    <hr>
 
     <!-- Cuarta Region-->
     <section>
-        <div class="col">Parte 1</div>
-        <div class="col">Parte 2</div>
+        <div class="col"></div>
+        <div class="col"></div>
     </section>
 
 </body>
