Estructura de proyecto 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carlos David Santillan</title>
+    <title>CDTechShop</title>
     <link rel="shortcut icon" href="/img/icons/cds.png" type="image/x-icon">
 </head>
 <body>
@@ -14,17 +14,21 @@
             <img src="/img/icons/cds.png" alt="Logo">
         </div>
         <div>
+            <h1>CDTechShop</h1>
+        </div>
+        <div>
             <nav>
                 <a href="#">¿Quienes somos?</a>
                 <a href="#">Productos</a>
-                <a href="#">Ofertas</a>
                 <a href="#">Ventas</a>
+                <a href="#">Servicio al Cliente</a>
             </nav>
         </div>
         <div>
-            <p>inst</p>
-            <p>lnkd</p>
-            <p>twt</p>
+            <p>whatsapp</p>
+            <p>instagram</p>
+            <p>facebook</p>
+            <p>x</p>
         </div>
     </section>
     <hr>
@@ -32,13 +36,7 @@
     <!-- Segunda Region-->
     <section>
         <div class="col">
-            <h1>Hola somos el Grupo 2</h1>
-            <h4>Estudiantes Certus </h4>
-            <p>Se realizara un proyecto de una tienda virtual.</p>
-        </div>
-        <br>
-        <div class="col">
-            <img src="" alt="Imagen de la tienda">
+            <img src="/img/Fondo.jpg" alt="Imagen de fondo">
         </div>
     </section>
     <hr>
@@ -47,7 +45,8 @@
     <section>
         <div class="col">
             <h3>¿Quienes somos?</h3>
-            <p>Somos la tienda Virtual S.A.C nos encargamos de distribuir los diferentes productos sin necesidad de salir de casa.</p>
+            <p>Somos la tienda Virtual CDTechShop nos encargamos de distribuir los diferentes productos tecnologicos sin necesidad de salir de casa.</p>
+            <p>Esta plataforma de venta online te permitira conseguir lo que requieres con solo ponerte en contacto con nosotros.</p>
             <br>
             <p>Con solo un click podra obtener lo que desea, confie en nosotros para tus compras virtuales.</p> 
         </div>
@@ -59,9 +58,58 @@
 
     <!-- Cuarta Region-->
     <section>
-        <div class="col"></div>
-        <div class="col"></div>
+            <h1>Productos</h1>
+        
+        <div class="col">
+            <nav>
+                <a href="">Laptops</a>
+                <img src="" alt="Laptops">
+                <br>
+                <a href="">Tablets</a>
+                <img src="" alt="Tablets">
+                <br>
+                <a href="">SmartPhones</a>
+                <img src="" alt="SmartPhones">
+                <br>
+                <a href="">Otros Articulos</a>
+                <img src="" alt="Otros Articulos">
+            </nav>   
+        </div>
     </section>
+    <hr>
+
+     <!-- Quinta Region-->
+     <section>
+            <h1>Ventas</h1>
+        
+        <div class="col">
+            <nav>
+                <a href="">Tu compra Online</a>
+                <ul>
+                    <li>Con tarjeta</li>
+                    <img src="" alt="Con tarjeta">
+                    <li>Sin tarjeta</li>
+                    <img src="" alt="Sin tarjeta">
+                </ul>
+            </nav>
+        </div>
+    </section>
+    <hr>
+
+         <!-- Sexta Region-->
+    <section>
+            <h1>Servicio al Cliente</h1>
+            <nav>
+                <a href="">Escribenos</a>
+                <a href="">Suscribete</a>
+                <a href="">Libro de reclamaciones</a>
+            </nav>
+
+        <div class="col">
+
+        </div>
+    </section>
+    <hr>
 
 </body>
 <footer>
